<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bag_tools</name>
  <version>0.1.0</version>
  <description>Tool extensions for ros2bag cli</description>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache 2.0</license>

  <depend>ros2bag</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>python3-yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>example_interfaces</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
