<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2bag_tools</name>
  <version>0.1.0</version>
  <description>Tool extensions for ros2bag cli</description>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/Kettenhoax/ros2bag_tools</url>
  <author email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</author>

  <depend>ros2bag</depend>
  <depend>rosbag2_py</depend>
  <depend>rosbag2_tools</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>python3-yaml</depend>
  <depend>cv_bridge</depend>

  <!-- for TUM exporter -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geodesy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>diagnostic_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
