<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag2_tools</name>
  <version>0.1.0</version>
  <description>Processing and visualization of ROS2 bag data in python</description>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache 2.0</license>

  <depend>rosbag2_py</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pandas</depend>
  <depend>python3-pil</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>diagnostic_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
